<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".AboutUsActivity"
    android:background="@drawable/page1_bg"
    android:orientation="vertical" >
    
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#1E90FF"
        android:textSize="25sp"
        android:text="@string/about_us_Title"
        android:gravity="center"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_us_introduction" 
        />  
    <View 
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:background="#CCCCCC"/>
    
    <TextView 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_us_zou_phone" />
    <TextView 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_us_zhang_phone" />
    <View 
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:background="#CCCCCC"/>
    <TextView 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_us_zou_email" />
    <TextView 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_us_zhang_email" />
    <View 
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:background="#CCCCCC"/>

</LinearLayout>
