<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".QueryCourseTableActivity" 
    android:orientation="vertical"
    android:background="@drawable/page1_bg">

      <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#1E90FF"
        android:textSize="25sp"
        android:text="@string/query_course_table_title"
        android:gravity="center"
        />
    <RadioGroup
        android:id="@+id/query_course_table_radio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"    
        android:layout_marginTop="24dp"
        >

        <RadioButton
            android:id="@+id/radioGroupButton0"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/qct_rt_select_number" />

        <RadioButton
            android:id="@+id/radioGroupButton1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/qct_rt_select_name" />

        <RadioButton
            android:id="@+id/radioGroupButton2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/qct_rt_select_teacher" />
         <RadioButton
            android:id="@+id/radioGroupButton3"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/qct_rt_select_unit" />
    </RadioGroup>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" 
        android:orientation="horizontal"
        >
        <EditText 
            android:id="@+id/qct_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/page1_login_input"
            android:singleLine="true"
            android:hint="@string/qct_edit_hint"
            android:layout_weight="3"/>
        <Button 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/qct_bt_title"
            android:onClick="jumptonext"/>
    </LinearLayout>

</LinearLayout>
