<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ChangePWActivity" 
    android:background="@drawable/page1_bg" >
    
    <RelativeLayout
        android:id="@+id/Change_LG"
        android:layout_width="fill_parent"
        android:layout_height="180dp"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

         <EditText
            android:id="@+id/change_old_passwd"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:paddingLeft="100dp"
            android:paddingRight="80dp"
            
            android:saveEnabled="true"
            android:singleLine="true"
            android:background="@drawable/page1_login_input"
            style="@style/page1_text"
            android:hint="@string/change_passwd_old_text"
            android:password="true" />
        <TextView
            android:id="@+id/change_old_passwd_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:paddingLeft="20dp"
            style="@style/page1_text"
            android:text="@string/change_passwd_old" />
  
        <EditText
            android:id="@+id/new_passwd"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/change_old_passwd"
            android:paddingLeft="100dp"
            android:paddingRight="80dp"
            android:saveEnabled="true"
            android:singleLine="true"
            android:background="@drawable/page1_login_input"
            style="@style/page1_text"
            android:hint="@string/change_passwd_new_text"
            android:password="true"/>
        <TextView
            android:id="@+id/new_passwd_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/change_old_passwd_text"
            android:paddingTop="32dp"
            android:paddingLeft="20dp"
            style="@style/page1_text"
            android:text="@string/change_passwd_new" />
         <EditText
            android:id="@+id/new_passwd_valid_edit"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:paddingTop="10dp"
            android:paddingLeft="100dp"
            android:paddingRight="80dp"
            android:password="true"
            android:layout_marginBottom="11dp"
            android:saveEnabled="true"
            android:singleLine="true"
            android:background="@drawable/page1_login_input"
            style="@style/page1_text"
            android:hint="@string/change_passwd_new_valid_text"
            />
        <TextView
            android:id="@+id/new_passwd_valid_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/new_passwd_text"
            android:paddingTop="38dp"
            android:paddingLeft="20dp"
            style="@style/page1_text"
            android:text="@string/change_passwd_new_valid" />
       
    </RelativeLayout>
    
    	<TableLayout 
	    android:id="@+id/Changepw_tableLayout"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_below="@+id/Change_LG"
	    android:gravity="center_horizontal">
	    <TableRow >
	        <Button 
	            android:layout_width="wrap_content"
	            android:layout_height="40dp"
	            android:paddingLeft="20dp"
	            android:layout_marginLeft="10dp"
	            android:paddingRight="40dp"
	            style="@style/page1_text"
	            android:text="@string/change_passwd_ack"
	            android:onClick="ChangePassWD"
	            />
	        <Button 
	            android:layout_width="wrap_content"
	            android:layout_height="40dp"
	            android:paddingLeft="30dp"
	            android:paddingRight="30dp"
	            android:layout_marginLeft="20dp"
	            style="@style/page1_text"
	            android:text="@string/change_passwd_cancel"
	            android:onClick="ClearData"
	            />
	    </TableRow>
	</TableLayout>

 

</RelativeLayout>
