<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".SendEmailActivity" 
    android:background="@drawable/page1_bg"
    android:orientation="vertical"
    >
    
    <TextView
        android:text="@string/send_email_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#1E90FF"
        android:textSize="25sp"
        android:gravity="center"/>
    
    
      
    <EditText 
        android:id="@+id/send_email_content"
        android:gravity="top"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:saveEnabled="true"
        android:hint="@string/send_email_context"
        android:lines="9"
        android:background="@drawable/page1_login_input"
        
        />
  
    
        <TableLayout 
	    android:id="@+id/Changepw_tableLayout"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	   
	    android:gravity="center_horizontal">
	    <TableRow >
	        <Button 
	            android:id="@+id/send_email_ack"
	            android:layout_width="wrap_content"
	            android:layout_height="40dp"
	            android:paddingLeft="20dp"
	            android:layout_marginLeft="10dp"
	            android:paddingRight="40dp"
	            style="@style/page1_text"
	            android:text="@string/send_email_b_ack"
	            android:onClick="SendEmail"
	            />
	        <Button 
	            android:id="@+id/send_email_clean"
	            android:layout_width="wrap_content"
	            android:layout_height="40dp"
	            android:paddingLeft="30dp"
	            android:paddingRight="30dp"
	            android:layout_marginLeft="20dp"
	            style="@style/page1_text"
	            android:text="@string/send_email_b_clean"
	            android:onClick="Clean"
	            
	            />
	    </TableRow>
	    </TableLayout>

</LinearLayout>
